# dromozoa-autotoolize

./: .gitignore  README.md  build.sh  check.sh  configure.ac  dromozoa-autotoolize  run.sh
